# psychology_helper

./: docker-compose.yaml  pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py  security.py
app/api/: routes.py
app/inference/: base.py  openai_compat.py  stub.py
app/storage/: db.py  models.py  repo.py
frontend/: index.html
